# MiniWebsServer

./: .clang-format  .cursorrules  CMakeLists.txt  ClientToBaidu.c  README.md  ServerFirst.c  build.sh  client  client.c
2022_testCode/day03/: server.c
2022_testCode/day04/: ClientToBaidu_bak.c  baidu
2022_testCode/day05/: Client  server  server.cpp  server_fail.c
2022_testCode/day05_tiny/: tiny  tiny.c
2022_testCode/day08/: Client  Client.c  server.cpp  server2  test
2022_testCode/day09/server_thread/: server_thread.c  server_thread_bak
2022_testCode/day10/: client
2022_testCode/day10/test/: demo  demo01.c  demo02.c  hello.c  testDemo1
2022_testCode/day11/: server  server_thread.c  test.conf
2023_testCode/: 1.txt
2023_testCode/project230308/Project230308/: Project230308.sln  Project230308.vcxproj  Project230308.vcxproj.filters  XTcp.h  main  main.cpp  (+2 more)
2023_testCode/字符串的封装/: MyString.cpp  MyString.h  字符串的封装.vcxproj  字符串的封装.vcxproj.filters  字符串类的封装.cpp
2023_testCode/网络通信接口/: CSckImp1.c  CSckImp1.h  网络通信接口.vcxproj  网络通信接口.vcxproj.filters
MiniWebServer/: myhttpd  myhttpd0
MiniWebServer/dir/: 404.html
day05/: Client.c
day08/: server  server2.c  test.c
day09/server_thread/: Client.c  client  server
day10/: Client.c  index.html
day10/test/: demo2  hello  test.conf
day4/: ClientToBaidu  ClientToBaidu.c  ClientToBaidu2
include/: block_queue.h  buffer.h  http_conn.h  log.h  server.h  threadpool.h  timer.h
output/: webserver
resources/: 404.html  index.html
src/: buffer.cpp  http_conn.cpp  log.cpp  main.cpp  server.cpp
text/: 1.go
(+31 files in other folders)
